--- a/.github/workflows/eas-update.yml
+++ b/.github/workflows/eas-update.yml
@@ -22,8 +22,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install EAS CLI
+        run: npm install -g eas-cli
+
       - name: Publish update to main
-        run: npx eas update --channel main --message "${{ github.event.head_commit.message }}"
+        run: eas update --channel main --message "${{ github.event.head_commit.message }}"
         env:
           CI: 1
           EXPO_TOKEN: ${{ secrets.EXPO_TOKEN }}
