--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^7.1.8",
     "@react-pdf/renderer": "^4.3.2",
     "@sentry/react-native": "~7.2.0",
+    "@swc/helpers": "^0.5.18",
     "expo": "~54.0.30",
     "expo-calendar": "~15.0.8",
     "expo-clipboard": "^8.0.8",
@@ -53,7 +54,8 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "yoga-layout": "^3.2.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
