--- a/app.json
+++ b/app.json
@@ -1,15 +1,16 @@
 {
   "expo": {
-    "name": "meuapp",
-    "slug": "meuapp",
+    "name": "GoAtleta",
+    "slug": "goatleta",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "meuapp",
+    "scheme": "goatleta",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.otaldogusta.goatleta"
     },
     "android": {
       "adaptiveIcon": {
@@ -21,7 +22,7 @@
       "edgeToEdgeEnabled": true,
       "softwareKeyboardLayoutMode": "resize",
       "predictiveBackGestureEnabled": false,
-      "package": "com.otaldogusta.meuapp"
+      "package": "com.otaldogusta.goatleta"
     },
     "web": {
       "output": "static",
