feat: implementa sistema de templates WhatsApp nas telas de turma e chamada

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,7 @@ EXPO_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 EXPO_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_ANON_KEY=your-anon-key
+# WhatsApp Default Message Toggle
+# Set to "true" or "default" to enable default messages in WhatsApp links
+# Set to "false" or "disabled" to send empty message texts
+EXPO_PUBLIC_WHATSAPP_DEFAULT_TEXT=true
